add headers to dist tarball

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 lib_LTLIBRARIES=ktcacheorbust-1.0.la
-ktcacheorbust_1_0_la_SOURCES=ktcacheorbust.cc fetch.cc
+ktcacheorbust_1_0_la_SOURCES=ktcacheorbust.h ktcacheorbust.cc fetch.h fetch.cc
 ktcacheorbust_1_0_la_CFLAGS=-fPIC
 ktcacheorbust_1_0_la_CPPFLAGS=-fPIC
 ktcacheorbust_1_0_la_CXXFLAGS=-fPIC
